test/tests/packages/lets_forward/forward.txt
error: `$b` is referenced before it is defined
 --> <packages/fwdpkg/constants.tql>:1:10
  |
1 | let $a = $b
  |          ^^ 
  |
